Added links to sponsors' websites

--- a/index.html
+++ b/index.html
@@ -301,28 +301,28 @@
         <div class="max-w-6xl mx-auto px-5 grid grid-cols-2 sm:grid-cols-2 md:grid-cols-4 lg:grid-cols-4 gap-10 pb-20">
             <!-- Example Sponsor Logo -->
             <div class="flex justify-center items-center">
-                <img src="./assets/drwlogo.png" alt="DRW" class="max-h-20">
+                <a href="https://www.drw.com"><img src="./assets/drwlogo.png" alt="DRW" class="max-h-20"></a>
             </div>
             <div class="flex justify-center items-center">
-                <img src="./assets/fiveringslogo.png" alt="Five Rings" class="max-h-20">
+                <a href="https://www.fiverings.com"><img src="./assets/fiveringslogo.png" alt="Five Rings" class="max-h-20"></a>
             </div>
             <div class="flex justify-center items-center">
-                <img src="./assets/imclogo.png" alt="IMC" class="max-h-20">
+                <a href="https://www.imc.com"><img src="./assets/imclogo.png" alt="IMC" class="max-h-20"></a>
             </div>
             <div class="flex justify-center items-center">
-                <img src="./assets/oldmissionlogo.png" alt="Old Mission Capital" class="max-h-20">
+                <a href="https://www.oldmissioncapital.com"><img src="./assets/oldmissionlogo.png" alt="Old Mission Capital" class="max-h-20"></a>
             </div>
             <!-- Repeat for each sponsor, adjusting the src attribute for each logo -->
         </div>
         <div class="max-w-6xl mx-auto px-5 grid grid-cols-1 sm:grid-cols-1 md:grid-cols-3 lg:grid-cols-3 gap-10">
             <div class="flex justify-center items-center">
-                <img src="./assets/janestreetlogo.png" alt="Jane Street" class="max-h-20">
+                <a href="https://www.janestreet.com"><img src="./assets/janestreetlogo.png" alt="Jane Street" class="max-h-20"></a>
             </div>
             <div class="flex justify-center items-center">
-                <img src="./assets/hapcapitallogo.png" alt="HAP Capital" class="max-h-20">
+                <a href="https://www.hap-capital.com"><img src="./assets/hapcapitallogo.png" alt="HAP Capital" class="max-h-20"></a>
             </div>
             <div class="flex justify-center items-center">
-                <img src="./assets/siglogo.png" alt="Susquehanna International Group" class="max-h-20">
+                <a href="https://www.sig.com"><img src="./assets/siglogo.png" alt="Susquehanna International Group" class="max-h-20"></a>
             </div>
         </div>
     </section>
