Fixed mobile behavior

--- a/index.html
+++ b/index.html
@@ -22,25 +22,60 @@
         document.addEventListener('DOMContentLoaded', function () {
             const popoverTriggers = document.querySelectorAll('[data-popover-target]');
 
+            // Function to check if text is selected
+            function isTextSelected() {
+                const selection = window.getSelection();
+                return selection.type === 'Range' && selection.toString().length > 0;
+            }
+
             popoverTriggers.forEach(trigger => {
                 trigger.addEventListener('click', function (event) {
+                    // Prevent default action and stop propagation to handle mobile touches better
                     event.preventDefault();
                     event.stopPropagation();
 
-                    const targetId = this.getAttribute('data-popover-target');
+                    // Don't show popover if text is selected
+                    if (isTextSelected()) {
+                        return;
+                    }
+
+                    const targetId = trigger.getAttribute('data-popover-target');
                     const target = document.getElementById(targetId);
 
-                    if (target.classList.contains('invisible')) {
-                        target.classList.remove('invisible');
+                    // Toggle visibility
+                    const isVisible = target.classList.contains('visible');
+                    if (!isVisible) {
                         target.classList.add('visible');
+                        target.classList.remove('invisible');
                         target.style.opacity = '1';
                     } else {
-                        target.classList.add('invisible');
                         target.classList.remove('visible');
+                        target.classList.add('invisible');
                         target.style.opacity = '0';
                     }
                 });
+
+                // Consider touchend event for mobile devices for better responsiveness
+                trigger.addEventListener('touchend', function (event) {
+                    event.stopPropagation(); // Only needed if you want to specifically handle touch events
+                });
             });
+
+            // Close popovers when tapping outside, considering touch events
+            document.body.addEventListener('click', closePopoversOnOutsideClick, true);
+            document.body.addEventListener('touchend', closePopoversOnOutsideClick, true);
+
+            function closePopoversOnOutsideClick(e) {
+                if (!e.target.closest('[data-popover-target]')) {
+                    document.querySelectorAll('[data-popover]').forEach(popover => {
+                        if (popover.classList.contains('visible')) {
+                            popover.classList.remove('visible');
+                            popover.classList.add('invisible');
+                            popover.style.opacity = '0';
+                        }
+                    });
+                }
+            }
         });
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
@@ -281,6 +316,9 @@
         <div class="max-w-6xl mx-auto px-5 grid grid-cols-2 sm:grid-cols-2 md:grid-cols-4 lg:grid-cols-4 gap-10 pb-20">
             <!-- Example Sponsor Logo -->
             <div class="flex justify-center items-center">
+                <a href="https://www.imc.com"><img src="./assets/imclogo.png" alt="IMC" class="max-h-20"></a>
+            </div>
+            <div class="flex justify-center items-center">
                 <a href="https://www.drw.com"><img src="./assets/drwlogo.png" alt="DRW" class="max-h-20"></a>
             </div>
             <div class="flex justify-center items-center">
@@ -288,13 +326,12 @@
                         class="max-h-20"></a>
             </div>
             <div class="flex justify-center items-center">
-                <a href="https://www.imc.com"><img src="./assets/imclogo.png" alt="IMC" class="max-h-20"></a>
+                <a href="https://www.oldmissioncapital.com"><img src="./assets/oldmissionlogo.png" alt="Old Mission Capital"
+                        class="max-h-20"></a>
             </div>
-            <div class="flex justify-center items-center">
-                <a href="https://www.oldmissioncapital.com"><img src="./assets/oldmissionlogo.png"
-                        alt="Old Mission Capital" class="max-h-20"></a>
-            </div>
-            <!-- Repeat for each sponsor, adjusting the src attribute for each logo -->
+        </div>
+        
+        <!-- Repeat for each sponsor, adjusting the src attribute for each logo -->
         </div>
         <div class="max-w-6xl mx-auto px-5 grid grid-cols-1 sm:grid-cols-1 md:grid-cols-3 lg:grid-cols-3 gap-10">
             <div class="flex justify-center items-center">
