--- a/index.html
+++ b/index.html
@@ -85,42 +85,55 @@
             <div class="bg-white shadow-lg rounded-lg p-5 space-y-4">
                 <!-- Event Item -->
                 <div class="event bg-gray-100 hover:bg-gray-200 rounded-lg p-4 relative cursor-pointer"
+                    data-popover-target="popover-0">
+                    <p class="mb-2"><strong>9:30 - 10:00</strong> — Check in</p>
+                </div>
+                <div data-popover id="popover-0" role="tooltip"
+                    class="absolute z-10 invisible inline-block w-64 text-sm text-gray-500 transition-opacity duration-300 bg-white border border-gray-200 rounded-lg shadow-sm opacity-0 dark:text-gray-400 dark:border-gray-600 dark:bg-gray-800">
+                    <div
+                        class="px-3 py-2 bg-gray-100 border-b border-gray-200 rounded-t-lg dark:border-gray-600 dark:bg-gray-700">
+                        <h3 class="font-semibold text-gray-900 dark:text-white">Check in</h3>
+                    </div>
+                    <div class="px-3 py-2">
+                        <p>Get checked into the event!</p>
+                    </div>
+                    <div data-popper-arrow></div>
+                </div>
+                <div class="event bg-gray-100 hover:bg-gray-200 rounded-lg p-4 relative cursor-pointer"
                     data-popover-target="popover-1">
-                    <p class="mb-2"><strong>10:00 - 11:00</strong> — Check in, Breakfast, & Networking</p>
+                    <p class="mb-2"><strong>10:00 - 10:40</strong> — Breakfast & Networking</p>
                 </div>
                 <div data-popover id="popover-1" role="tooltip"
                     class="absolute z-10 invisible inline-block w-64 text-sm text-gray-500 transition-opacity duration-300 bg-white border border-gray-200 rounded-lg shadow-sm opacity-0 dark:text-gray-400 dark:border-gray-600 dark:bg-gray-800">
                     <div
                         class="px-3 py-2 bg-gray-100 border-b border-gray-200 rounded-t-lg dark:border-gray-600 dark:bg-gray-700">
-                        <h3 class="font-semibold text-gray-900 dark:text-white">Check in, Breakfast, & Networking</h3>
+                        <h3 class="font-semibold text-gray-900 dark:text-white">Breakfast & Networking</h3>
                     </div>
                     <div class="px-3 py-2">
-                        <p>Check in to the conference, grab some breakfast, and network with industry professionals and
-                            peers.</p>
+                        <p>Grab some breakfast, and network with industry professionals and peers.</p>
                     </div>
                     <div data-popper-arrow></div>
                 </div>
 
                 <div class="event bg-gray-100 hover:bg-gray-200 rounded-lg p-4 relative cursor-pointer"
                     data-popover-target="popover-2">
-                    <p class="mb-2"><strong>11:00 - 11:55 </strong> — Introduction & Zingers </p>
+                    <p class="mb-2"><strong>10:45 - 12:05 </strong> — Introduction, ETF Game & Wager Game </p>
                 </div>
                 <div data-popover id="popover-2" role="tooltip"
                     class="absolute z-10 invisible inline-block w-64 text-sm text-gray-500 transition-opacity duration-300 bg-white border border-gray-200 rounded-lg shadow-sm opacity-0 dark:text-gray-400 dark:border-gray-600 dark:bg-gray-800">
                     <div
                         class="px-3 py-2 bg-gray-100 border-b border-gray-200 rounded-t-lg dark:border-gray-600 dark:bg-gray-700">
-                        <h3 class="font-semibold text-gray-900 dark:text-white">Introduction & Zingers</h3>
+                        <h3 class="font-semibold text-gray-900 dark:text-white">Introduction, ETF Game & Wager Game</h3>
                     </div>
                     <div class="px-3 py-2">
-                        <p>Brief introduction to the convention and our attending sponsors, followed by a game of our
-                            in-house developed trading simulation game.</p>
+                        <p>Get an overview of the day, an introduction to our title sponsors, a word from our unattending sponsors, and play both of Traders at Michigan's proprietary trading games!</p>
                     </div>
                     <div data-popper-arrow></div>
                 </div>
 
                 <div class="event bg-gray-100 hover:bg-gray-200 rounded-lg p-4 relative cursor-pointer"
                     data-popover-target="popover-3">
-                    <p class="mb-2"><strong>12:00 - 12:30 </strong> — Old Mission Capital Event </p>
+                    <p class="mb-2"><strong>12:10 - 12:40 </strong> — Old Mission Capital Event </p>
                 </div>
                 <div data-popover id="popover-3" role="tooltip"
                     class="absolute z-10 invisible inline-block w-64 text-sm text-gray-500 transition-opacity duration-300 bg-white border border-gray-200 rounded-lg shadow-sm opacity-0 dark:text-gray-400 dark:border-gray-600 dark:bg-gray-800">
@@ -129,14 +142,14 @@
                         <h3 class="font-semibold text-gray-900 dark:text-white">Old Mission Capital Event</h3>
                     </div>
                     <div class="px-3 py-2">
-                        <p>Game hosted by our attending sponsor, Old Mission Capital!</p>
+                        <p>Play a team-based market making game led by our sponsor, Old Mission Capital.</p>
                     </div>
                     <div data-popper-arrow></div>
                 </div>
 
                 <div class="event bg-gray-100 hover:bg-gray-200 rounded-lg p-4 relative cursor-pointer"
                     data-popover-target="popover-4">
-                    <p class="mb-2"><strong>12:35 - 1:05 </strong> — Sponsor Panel </p>
+                    <p class="mb-2"><strong>12:45 - 1:25 </strong> — Industry Panel </p>
                 </div>
                 <div data-popover id="popover-4" role="tooltip"
                     class="absolute z-10 invisible inline-block w-64 text-sm text-gray-500 transition-opacity duration-300 bg-white border border-gray-200 rounded-lg shadow-sm opacity-0 dark:text-gray-400 dark:border-gray-600 dark:bg-gray-800">
@@ -145,14 +158,14 @@
                         <h3 class="font-semibold text-gray-900 dark:text-white">Sponsor Panel</h3>
                     </div>
                     <div class="px-3 py-2">
-                        <p>Panel hosted by some of our sponsors' employees.</p>
+                        <p>Gain insight from traders and developers at industry-leading quantitative finance firms, with the opportunity to get answers to all of your questions.</p>
                     </div>
                     <div data-popper-arrow></div>
                 </div>
 
                 <div class="event bg-gray-100 hover:bg-gray-200 rounded-lg p-4 relative cursor-pointer"
                     data-popover-target="popover-5">
-                    <p class="mb-2"><strong>1:10 - 2:00 </strong> — Lunch & Networking </p>
+                    <p class="mb-2"><strong>1:30 - 2:10 </strong> — Lunch & Networking </p>
                 </div>
                 <div data-popover id="popover-5" role="tooltip"
                     class="absolute z-10 invisible inline-block w-64 text-sm text-gray-500 transition-opacity duration-300 bg-white border border-gray-200 rounded-lg shadow-sm opacity-0 dark:text-gray-400 dark:border-gray-600 dark:bg-gray-800">
@@ -161,62 +174,62 @@
                         <h3 class="font-semibold text-gray-900 dark:text-white">Lunch & Networking</h3>
                     </div>
                     <div class="px-3 py-2">
-                        <p>Enjoy lunch catered by X, while networking with peers and industry professionals.</p>
+                        <p>Enjoy lunch catered by Jerusalem Gardens, a Michigan favorite, while networking with our attending sponsors.</p>
                     </div>
                     <div data-popper-arrow></div>
                 </div>
 
                 <div class="event bg-gray-100 hover:bg-gray-200 rounded-lg p-4 relative cursor-pointer"
                     data-popover-target="popover-6">
-                    <p class="mb-2"><strong>2:00 - 2:30 </strong> — DRW Event </p>
+                    <p class="mb-2"><strong>2:10 - 2:40 </strong> — IMC Speaker Series </p>
                 </div>
                 <div data-popover id="popover-6" role="tooltip"
                     class="absolute z-10 invisible inline-block w-64 text-sm text-gray-500 transition-opacity duration-300 bg-white border border-gray-200 rounded-lg shadow-sm opacity-0 dark:text-gray-400 dark:border-gray-600 dark:bg-gray-800">
                     <div
                         class="px-3 py-2 bg-gray-100 border-b border-gray-200 rounded-t-lg dark:border-gray-600 dark:bg-gray-700">
-                        <h3 class="font-semibold text-gray-900 dark:text-white">DRW Event</h3>
+                        <h3 class="font-semibold text-gray-900 dark:text-white">IMC Speaker Series</h3>
                     </div>
                     <div class="px-3 py-2">
-                        <p>Game hosted by our attending sponsor, DRW!</p>
+                        <p>Gain some stellar insight from our title sponsor, IMC Trading.</p>
                     </div>
                     <div data-popper-arrow></div>
                 </div>
 
                 <div class="event bg-gray-100 hover:bg-gray-200 rounded-lg p-4 relative cursor-pointer"
                     data-popover-target="popover-7">
-                    <p class="mb-2"><strong>2:35 - 3:05 </strong> — Five Rings Event </p>
+                    <p class="mb-2"><strong>2:45 - 3:15 </strong> — DRW Game </p>
                 </div>
                 <div data-popover id="popover-7" role="tooltip"
                     class="absolute z-10 invisible inline-block w-64 text-sm text-gray-500 transition-opacity duration-300 bg-white border border-gray-200 rounded-lg shadow-sm opacity-0 dark:text-gray-400 dark:border-gray-600 dark:bg-gray-800">
                     <div
                         class="px-3 py-2 bg-gray-100 border-b border-gray-200 rounded-t-lg dark:border-gray-600 dark:bg-gray-700">
-                        <h3 class="font-semibold text-gray-900 dark:text-white">Five Rings Event</h3>
+                        <h3 class="font-semibold text-gray-900 dark:text-white">DRW Game</h3>
                     </div>
                     <div class="px-3 py-2">
-                        <p>Game hosted by our attending sponsor, Five Rings!</p>
+                        <p>Play a market simulation trading game led by our sponsor, DRW!</p>
                     </div>
                     <div data-popper-arrow></div>
                 </div>
 
                 <div class="event bg-gray-100 hover:bg-gray-200 rounded-lg p-4 relative cursor-pointer"
                     data-popover-target="popover-8">
-                    <p class="mb-2"><strong>3:10 - 3:40 </strong> — IMC Event </p>
+                    <p class="mb-2"><strong>3:20 - 3:50 </strong> — Citadel Speaker Series </p>
                 </div>
                 <div data-popover id="popover-8" role="tooltip"
                     class="absolute z-10 invisible inline-block w-64 text-sm text-gray-500 transition-opacity duration-300 bg-white border border-gray-200 rounded-lg shadow-sm opacity-0 dark:text-gray-400 dark:border-gray-600 dark:bg-gray-800">
                     <div
                         class="px-3 py-2 bg-gray-100 border-b border-gray-200 rounded-t-lg dark:border-gray-600 dark:bg-gray-700">
-                        <h3 class="font-semibold text-gray-900 dark:text-white">IMC Event</h3>
+                        <h3 class="font-semibold text-gray-900 dark:text-white">Citadel Speaker Series</h3>
                     </div>
                     <div class="px-3 py-2">
-                        <p>Game hosted by our attending sponsor, IMC!</p>
+                        <p>Learn more about our title sponsor, Citadel.</p>
                     </div>
                     <div data-popper-arrow></div>
                 </div>
 
                 <div class="event bg-gray-100 hover:bg-gray-200 rounded-lg p-4 relative cursor-pointer"
                     data-popover-target="popover-9">
-                    <p class="mb-2"><strong>3:40 - 3:50 </strong> — Break </p>
+                    <p class="mb-2"><strong>3:55 - 4:05 </strong> — Break </p>
                 </div>
                 <div data-popover id="popover-9" role="tooltip"
                     class="absolute z-10 invisible inline-block w-64 text-sm text-gray-500 transition-opacity duration-300 bg-white border border-gray-200 rounded-lg shadow-sm opacity-0 dark:text-gray-400 dark:border-gray-600 dark:bg-gray-800">
@@ -232,7 +245,7 @@
 
                 <div class="event bg-gray-100 hover:bg-gray-200 rounded-lg p-4 relative cursor-pointer"
                     data-popover-target="popover-10">
-                    <p class="mb-2"><strong>3:50 - 4:30 </strong> — Speed Dating </p>
+                    <p class="mb-2"><strong>4:05 - 4:55 </strong> — Speed Dating </p>
                 </div>
                 <div data-popover id="popover-10" role="tooltip"
                     class="absolute z-10 invisible inline-block w-64 text-sm text-gray-500 transition-opacity duration-300 bg-white border border-gray-200 rounded-lg shadow-sm opacity-0 dark:text-gray-400 dark:border-gray-600 dark:bg-gray-800">
@@ -248,7 +261,7 @@
 
                 <div class="event bg-gray-100 hover:bg-gray-200 rounded-lg p-4 relative cursor-pointer"
                     data-popover-target="popover-11">
-                    <p class="mb-2"><strong>4:35 - 4:55 </strong> — Closing Remarks & Awards Ceremony </p>
+                    <p class="mb-2"><strong>5:00 - 5:30 </strong> — Closing Remarks & Awards Ceremony </p>
                 </div>
                 <div data-popover id="popover-11" role="tooltip"
                     class="absolute z-10 invisible inline-block w-64 text-sm text-gray-500 transition-opacity duration-300 bg-white border border-gray-200 rounded-lg shadow-sm opacity-0 dark:text-gray-400 dark:border-gray-600 dark:bg-gray-800">
@@ -265,7 +278,7 @@
 
                 <div class="event bg-gray-100 hover:bg-gray-200 rounded-lg p-4 relative cursor-pointer"
                     data-popover-target="popover-12">
-                    <p class="mb-2"><strong>5:00 - 5:15 </strong> — Merchandise Pick-up </p>
+                    <p class="mb-2"><strong>5:30 - 5:45 </strong> — Merchandise Pick-up </p>
                 </div>
                 <div data-popover id="popover-12" role="tooltip"
                     class="absolute z-10 invisible inline-block w-64 text-sm text-gray-500 transition-opacity duration-300 bg-white border border-gray-200 rounded-lg shadow-sm opacity-0 dark:text-gray-400 dark:border-gray-600 dark:bg-gray-800">
@@ -274,7 +287,7 @@
                         <h3 class="font-semibold text-gray-900 dark:text-white">Merchandise Pick-up</h3>
                     </div>
                     <div class="px-3 py-2">
-                        <p>Pick up some merchandise from our industry sponsors on your way out!</p>
+                        <p>Pick up some swag from our industry sponsors on your way out!</p>
                     </div>
                     <div data-popper-arrow></div>
                 </div>
